	* Modified rivendell/rd_common.c to fix Daylight Saving Time adjustment.
2017-02-02 Todd Baker <bakert@rfa.org>
	* Added new Date conversion functions in rd_common.c
	and rd_common.h
	* Modified rivendell/rd_addcart.c, rivendell/rd_addcut.c
	rivendell/rd_addcut.c, rivendell/rd_editcut.c, 
	rivendell/rd_listcart.c, rivendell/rd_listcarts.c,
	rivendell/rd_listcut.c, rivendell/rd_listcuts.c, 
	rivendell/rd_listlog.c,rivendell/rd_listlogs.c
	test/editcuts.c to use the new functions. 
	*  Updated Makefile so that the tests would find 
	math library. Updated rivendell.pc.in as well.
2017-02-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'RD_SaveLog()' call.
2017-02-03 Fred Gleason <fredg@paravelsystems.com>
	* Added RD_Cnv_TString_to_msec() and RD_Cnv_msec_to_TString()
	functions in 'rivendell/rd_common.c' and 'rivendell/rd_common.h'.
	* Modified the 'rd_logline.logline_starttime' field in
	'rivendell/rd_listlog.h' to be an int.
	* Added 'link' and 'ext' fields to the 'RD_ListLog()' call.
2017-02-03 Todd Baker <bakert@rfa.org>
	* Updated comments in rivendell/rd_common.c, rivendell/rd_addcart.c 
	and rivendell/rd_addcart.h.
2017-02-03 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'RD_Cnv_tm_to_DTString()' in 'rivendell/rd_common.c'
	that caused a segfault when passed a null 'struct tm' value.
2017-02-08 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'logline_gracetime' field to the
	'save_logline_values' struct in 'rivendell/rd_savelog.h'.
	* Added the 'logline_link_length' field to the
	'save_logline_values' struct in 'rivendell/rd_savelog.h'.
	* Fixed typos in 'rivendell/rd_savelog.c' that broke the
	RD_SaveLog() call.
	* Altered the 'logline_link_starttime' and 'logline_ext_starttime'
	fields of 'struct save_logline_values' to be 'struct tm' instead
	of 'char []'.
	* Added an rd_savelog(7) man page.
2017-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'logline_conductor' field to the 'rd_logline' struct.