@@ -46,7 +46,8 @@ struct rd_logline {
   char logline_user_defined[256];
   int  logline_usage_code;
   int  logline_enforce_length;
-  char logline_forced_length[10];
+  //  char logline_forced_length[10];
+  int  logline_forced_length;
   int  logline_evergreen;
   int  logline_source;
   int  logline_time_type;
